--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@tonconnect/ui-react": "^2.0.6",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "axios": "^1.7.2",
+    "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "qrcode": "^1.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "redis": "^4.6.5"
   },
   "devDependencies": {
