--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "redis": "^4.6.5"
+    "sonner": "^1.3.1"
   },
   "devDependencies": {
     "@types/node-telegram-bot-api": "^0.61.4",
