--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
+    "file-saver": "^2.0.5",
     "qrcode": "^1.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -22,6 +23,7 @@
     "sonner": "^1.3.1"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node-telegram-bot-api": "^0.61.4",
     "@types/qrcode": "^1.5.0",
     "@types/react": "^18.3.3",
