--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,7 +35,7 @@ jobs:
             - name: build
               run: yarn build
             - name: set page
-            - uses: actions/upload-artifact@v4
+              uses: actions/configure-pages@v4
             - name: update pages
               uses: actions/upload-pages-artifact@v1
               with:
@@ -43,4 +43,3 @@ jobs:
             - name: build to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v1
-
