--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,7 +36,7 @@ jobs:
               run: yarn build
             - name: set page
               uses: actions/configure-pages@v3
-            - name: update pages
+            - name: upload artifact
               uses: actions/upload-artifact@v4
               with:
                   name: github-pages
