--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,10 +39,10 @@ jobs:
             - name: upload artifact
               uses: actions/upload-artifact@v4
               with:
-                  name: github-pages
-                  path: './docs'
-            - name: build to GitHub Pages
+                  name: github-pages  
+                  path: './docs'      
+            - name: deploy to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v1
               with:
-               artifact-name: github-pages
+                  artifact_name: github-pages  
