--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,13 +36,10 @@ jobs:
               run: yarn build
             - name: set page
               uses: actions/configure-pages@v3
-            - name: upload artifact
-              uses: actions/upload-artifact@v4
+            - name: update pages
+              uses: actions/upload-pages-artifact@v2.0.0
               with:
-                  name: github-pages  
-                  path: './docs'      
-            - name: deploy to GitHub Pages
+                  path: './docs'
+            - name: build to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v1
-              with:
-                  artifact_name: github-pages  
