--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,7 +37,7 @@ jobs:
             - name: set page
               uses: actions/configure-pages@v3
             - name: update pages
-              uses: actions/upload-artifact@v4
+              uses: actions/upload-pages-artifact@v1
               with:
                   path: './docs'
             - name: build to GitHub Pages
