--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,9 +37,12 @@ jobs:
             - name: set page
               uses: actions/configure-pages@v3
             - name: update pages
-              uses: actions/upload-artifact@v4
+              uses: actions/upload-pages-artifact@v1
               with:
+                  name: github-pages 
                   path: './docs'
-            - name: github-pages
+            - name: build to GitHub Pages
               id: deployment
-              uses: actions/deploy-pages@v3
+              uses: actions/deploy-pages@v4
+              with:
+              artifact_name: github-pages
