--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,7 +39,13 @@ jobs:
             - name: update pages
               uses: actions/upload-artifact@v4
               with:
+                  name: github-pages
                   path: './docs'
-            - name: github-pages
+            - name: Download artifact 
+              uses: actions/download-artifact@v4
+              with:
+                  name: github-pages
+                  path: .      
+            - name:  Deploy to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v4
