--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -45,7 +45,7 @@ jobs:
               uses: actions/download-artifact@v4
               with:
                   name: github-pages
-                  path: .      
+                  path: './docs'
             - name:  Deploy to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v4
